syntax = "proto3";

option go_package = "pkg/materials";

service MaterialsService {
  rpc GetMaterial(GetMaterialIn) returns (GetMaterialOut) {};
}

message GetMaterialIn {
  string uuid = 1; // UUID материала
}

message GetMaterialOut {
  string uuid = 1;
  string owner_uuid = 2;        // UUID владельца материала
  string title = 3;             // Заголовок материала
  string cover_image_url = 4;   // URL обложки материала
  string description = 5;       // Описание материала
  string content = 6;           // Содержимое материала
  int32 read_time_minutes = 7;  // Время чтения в минутах
}